# blowfish-signature-example

./: .gitignore  README.md
data/: data.txt  data.txt.sign  key.der  key.pem  key.pub.der  key.pub.pem
data/prod/: key.pub.der  key.pub.pem
rust/: Cargo.toml
rust/src/: main.rs
ts/: nodemon.json  package-lock.json  package.json  tsconfig.json
ts/src/: index.ts
ts/test/: index.ts
