[package]
name = "signature-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
reqwest = { version = "0.12.7", features = ["blocking"] }
ring = "0.17.8"
